# Go2Py

./: .gitignore  pyproject.toml  requirements.txt
legged_mppi/: MUJOCO_LOG.TXT  simulate_mppi.py
legged_mppi/analysis/: mujoco_traj_param_rate_100_h_40_lam_0.1_n_30_T_2000_task_walk_straight.tsv  mujoco_traj_param_rate_100_h_40_lam_0.1_n_30_T_500_task_walk_straight.tsv
legged_mppi/control/controllers/: base_controller.py  mppi_locomotion.py
legged_mppi/control/controllers/configs/: mppi_gait_config_walk.yml
legged_mppi/control/gait_scheduler/: scheduler.py
legged_mppi/interface/: simulator.py
legged_mppi/models/go1/: go1_mppi_pyr.xml  go1_scene_mppi_pyr.xml
legged_mppi/models/go2/: go2.xml
legged_mppi/models/trifinger/: trifinger_cube_scene.xml  trifinger_scene.urdf  trifinger_scene.xml
legged_mppi/utils/: tasks.py
manipulator_mppi/: MUJOCO_LOG.TXT  profile_MPPI.txt  simulate_mppi.py
manipulator_mppi/control/controllers/: base_controller.py  mppi_manipulation.py  mppi_reaching.py
manipulator_mppi/control/samplers/: samplers.py
manipulator_mppi/interface/: simulator.py
manipulator_mppi/models/: view_model.py
manipulator_mppi/models/nyufinger/: trifinger_nyu_cube_scene.xml  trifinger_nyu_cube_scene_simulation.xml  trifinger_nyu_nocollision.xml  trifinger_nyu_scene.xml
manipulator_mppi/models/trifinger/: finger.xml  trifinger_cube_scene.urdf  trifinger_cube_scene.xml  trifinger_cube_scene_noselfcollision.xml  trifinger_scene.xml  trifinger_scene_noselfcollision.xml
manipulator_mppi/utils/: tasks.py
(+3 files in other folders)
